<resources>
    <string name="app_id">9376a3b4</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">
        科大讯飞作为智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有技术成果。科大讯飞是我国以语音技术为产业化方向的“国家863计划产业化基地”.....
    </string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.
    </string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <string name="text_begin">请开始说话&#8230;</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="voicer_xtts_entries">
        <item>nannan</item>
        <item>小关</item>
        <item>宜丰</item>
        <item>小曦</item>
        <item>小燕</item>
        
    </string-array>
    <string-array name="voicer_xtts_values">
        <item>nannan</item>
        <item>xiaoguan</item>
        <item>yifeng</item>
        <item>xiaoxi</item>
        <item>xiaoyan</item>
        
    </string-array>
    <string-array name="voicer_local_entries">
        <item>小燕</item>
        <item>小峰</item>

    </string-array>
    <string-array name="voicer_local_values">
        <item>xiaoyan</item>
        <item>xiaofeng</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="example_explain_wake">唤醒是指通过说出特定的唤醒词来唤醒处于休眠状态下的设备，又分为唤醒和唤醒+识别。</string>
    <string name="wake_demo_hint">请点击“开始唤醒”后读出您在开放平台购买的唤醒词，当引擎计算得分大于您设置的门限值时，即可进行唤醒。</string>
    <string name="oneshot_demo_hint">请点击“唤醒+识别”后读出您在开放平台购买的唤醒词+语法中指定的识别对象，当引擎计算得分大于您设置的门限值时，即可进行唤醒+识别。</string>
    <string name="oneshot_resource_hint">本示例识别词语为“张三|李四|张海洋”，请开发者将语法文件中的唤醒词字段替换，本地语法定义详见demo工程的asset/wake.bnf文件。</string>
    <string name="page_preview">face attributes detect(video)</string>
    <string name="page_ir_preview">ir liveness detect(video)</string>
    <string name="page_face_recognize">face compare 1:n(video vs database,rgb liveness detect)</string>
    <string name="page_ir_face_recognize">face compare 1:n(video vs database,ir liveness detect)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="page_face_manage">face manage</string>
    <string name="get_device_finger_failed">get device finger failed, code is: %d</string>
    <string name="choose_detect_degree">choose video-mode detect degree</string>
    <string name="copy_device_fingerprint">copy device fingerprint</string>
    <string name="device_fingerprint_copied">device fingerprint：：\n%s\n copied</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="library_not_found">library not found, please check if you put .so files into the project directory app\\src\\main\\jniLibs</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="processing">processing</string>
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="permission_denied">permission denied!</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>
    <string name="register">register</string>
    <string name="switch_camera">switch camera</string>
    <string name="switch_camera_failed">switch camera failed</string>
    <string name="notice_change_detect_degree">camera switched, if no face detected, please change face detect degree in homepage</string>
    <string name="recognize_failed_notice">DENIED:%s</string>
    <string name="recognize_success_notice">PASS:%s</string>
    <string name="low_confidence_level">face low confidence level</string>
    <string name="specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="draw_ir_rect_mirror_horizontal">draw IR face rect mirror horizontal</string>
    <string name="draw_ir_rect_mirror_vertical">draw IR face rect mirror vertical</string>
    <string name="progress_dialog_batch_register">progress: %d / %d</string>
    <string name="progress_dialog_registering_please_wait">registering,please wait</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="batch_process_notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="batch_process_no_face_need_to_delete">no face need to delete</string>
    <string name="batch_process_confirm_delete">delete those %d images and face features?</string>
    <string name="batch_process_batch_register">batch register</string>
    <string name="batch_process_notification">notification</string>
    <string name="batch_process_clear_faces">clear faces</string>
    <string name="batch_process_path_is_not_exists">path \n%s\n is not exists</string>
    <string name="batch_process_path_is_not_dir">path \n%s\n is not a directory</string>
    <string name="batch_process_processing_please_wait">process start,please wait</string>
    <string name="batch_process_finished_info">process finished!\ntotal count =  %d \nsuccess count = %d \nfailed count = %d \nfailed images are in directory \' %s \'</string>
    <string name="path">/sdcard/test0.mp4</string>
    <string name="app_name">VisualAIDS</string>
    <string name="camera_user">username</string>
    <string name="version_code">version number</string>
    <string name="soft_name">software name</string>
    <string name="camera_pwd">password</string>
    <string name="str_ok"> OK </string>
    <string name="str_cancel"> cancel </string>
    <string name="exit_alert">Confirm exit?</string>
    <string name="password">Password:</string>
    <string name="showpwd">Show password</string>
    <string name="connected">connected</string>
    <string name="pwd_no_empty">Password cannot be empty</string>
    <string name="camera_port">Port</string>
    <string name="send_error">Send failed</string>
    <string name="recv_error">Receive failed</string>
    <string name="unknow_error">Unknown error</string>
    <string name="disclaimer_conent">Shenzhen Oujiete Technology Co., Ltd. reserves the ownership of this software, piracy is reserved. </string>
    <string name="version_conent">V 0.0.0.1</string>
    <string name="contact_me">"Company Website: http://www.object-camera.com Customer Service Email: support@object-camera.com"</string>
    <string name="more_about_disclaimer">Software Declaration</string>
    <string name="more_about_version"> version information </string>
    <string name="more_about_contact">Contact Us</string>
    <string name="camera_not_online"> camera disconnected, please reconnect to the home page </string>
    <string name="app_running"> is running </string>
    <string name="sensorlist_addnewdevice">Add new device</string>
    <string name="sensor_list_sensor">sensor</string>
    <string name="sensorlist_havedevice">The device you have added</string>
    <string name="add_sensor_infrerad_desc"> Infrared uses the thermal effect of infrared radiation to detect whether someone or an animal has passed. </string>
    <string name="camera_id"> device ID</string>
    <string name="login_stuta_camer">Camera Status</string>
    <string name="connect">Connect</string>
</resources>