<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextureView
            android:id="@+id/single_camera_texture_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.ipcamera.demotest.model.FaceRectView
            android:id="@+id/single_camera_face_rect_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_gravity="bottom"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Switch
            android:id="@+id/single_camera_switch_liveness_detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/liveness_detect" />
        <ImageView
            android:src="@drawable/register"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="register"
            android:enabled="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/register" />
        <ImageView
            android:src="@drawable/switch_camera"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:onClick="switchCamera"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/switch_camera" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/single_camera_recycler_view_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>