<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_corner">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/login_top_linear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login_stuta_camer"
                android:textColor="#ffffff" />

            <ProgressBar
                android:id="@+id/main_model_progressBar1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/background_white_corner"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/camera_id"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/editDID"
                    android:text="VB0021898FMIE"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:maxLength="64"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@color/color_grey" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/camera_user"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/editUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/color_black"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:text="admin" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@color/color_grey" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/camera_pwd"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/editPwd"
                    android:text="021112Cz"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/color_black"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@color/color_grey" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@color/color_grey" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp">

                <ImageView
                    android:id="@+id/connect_camera"
                    android:onClick="connect_camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/connect"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"/>
                <Button
                    android:visibility="gone"
                    android:id="@+id/connect"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="3.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:gravity="center"
                    android:text="@string/connect"
                    android:textSize="@dimen/text_title_size" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>